--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -1,57 +1,19 @@
 <!-- Header Carousel -->
-<header id="myCarousel" class="carousel slide">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-        <div class="item active">
-            <div class="fill" style="background-image:url('https://static.pexels.com/photos/8717/food-pot-kitchen-cooking-medium.jpg');"></div>
-            <div class="carousel-caption">
-                <h2>Caption 1</h2>
-            </div>
-        </div>
-        <div class="item">
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
-            <div class="carousel-caption">
-                <h2>Caption 2</h2>
-            </div>
-        </div>
-        <div class="item">
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
-            <div class="carousel-caption">
-                <h2>Caption 3</h2>
-            </div>
-        </div>
-    </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="icon-prev"></span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="icon-next"></span>
-    </a>
+<header>
+<div class="jumbotron" style="color:white;">
+  <center><h1><strong>S&#9786;USchef</strong></h1></center>
+</div>
 </header>
 
+
 <!-- Page Content -->
-<div class="container">
 
     <!-- Marketing Icons Section -->
     <div class="row">
-        <div class="col-lg-12">
-            <center><h1 class="page-header">
-                <strong>S&#9786;USchef</strong>
-            </h1></center>
-        </div>
         <div class="col-md-4">
             <div class="panel panel-info">
-                <div class="panel-heading">
-                    <center><h4><i class="fa fa-heart-o"></i> Find Your Recipe</h4></center>
+                <div class="panel-heading" style="background-color: #6699cc;">
+                    <center><h4 style="color: white;"><i class="fa fa-heart-o"></i> Find Your Recipe</h4></center>
                 </div>
                 <div class="panel-body">
                     <p>Search our recipes to find exactly what you'd like to prepare. We always include new and different cuisines from around the world. Discover new dishes and unlock your inner chef to make your meals great again.</p>
@@ -61,8 +23,8 @@
         </div>
         <div class="col-md-4">
             <div class="panel panel-info">
-                <div class="panel-heading">
-                    <center><h4><i class="fa fa-list-ul"></i> Make a Shopping List</h4></center>
+                <div class="panel-heading" style="background-color: #6699cc;">
+                    <center><h4 style="color: white;"><i class="fa fa-list-ul"></i> Make a Shopping List</h4></center>
                 </div>
                 <div class="panel-body">
                     <p>Once you found the recipe you'd like to prepare, simply drag the ingredients to your shopping list. Send the list to your phone, email or a family member. You can even send it directly to a local grocery store for delivery.</p>
@@ -72,8 +34,8 @@
         </div>
         <div class="col-md-4">
             <div class="panel panel-info">
-                <div class="panel-heading">
-                    <center><h4><i class="fa fa-fire"></i> Start Cooking</h4></center>
+                <div class="panel-heading" style="background-color: #6699cc;">
+                    <center><h4 style="color: white;"><i class="fa fa-fire"></i> Start Cooking</h4></center>
                 </div>
                 <div class="panel-body">
                     <p>Once you have all of your ingredients, we can start cooking! Follow the step by step instructions that will walk you through the preparation of your next incredible meal. No need to worry, the built-in timer feature will keep track of everything</p>
@@ -85,9 +47,9 @@
     <!-- /.row -->
 
     <!-- Portfolio Section -->
-    <div class="row">
+    <div class="row" style="background-color:#f2f2f2; padding: 0 20px 40px 20px; border-top: 1px solid #6699cc; border-bottom: 1px solid #6699cc;">
         <div class="col-lg-12">
-            <center><h2 class="page-header">|  master your kitchen  |</h2></center>
+            <center><h1 class="page-header">| master your kitchen |</h1></center>
         </div>
         <div class="col-md-4 col-sm-6">
             <a href="portfolio-item.html">
@@ -153,7 +115,7 @@
                 <p>Still not sure where to start? We're here to help, just shoot us an email and a member of our support team will guide through every step of the way.</p>
             </div>
             <div class="col-md-4">
-                <a class="btn btn-lg btn-info btn-block" href="#">Contact Us</a>
+                <a class="btn btn-lg btn-block" style="color: white; background-color: #6699cc;" href="#">Contact Us</a>
             </div>
         </div>
     </div>
@@ -169,7 +131,6 @@
         </div>
     </footer>
 
-</div>
 <!-- /.container -->
 
 <!-- jQuery -->
