--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,23 +25,23 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" style="color: white;" href="/"><b>S&#9786;USchef</b> | master your kitchen</a>
+                <a class="navbar-brand" style="color: white;" href="/"><strong>S<i class="fa fa-smile-o" style="color: #6699cc;"></i>US</strong>chef | master your kitchen</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color: white;">BECOME A CHEF<b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color: #6699cc;">explore <strong>S<i class="fa fa-smile-o"></i>US</strong>chef<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="/recipes">Recipes</a>
+                                <a href="/recipes"><i class="fa fa-heart-o fa-lg" style="color: red;"></i> Recipes</a>
                             </li>
                             <li>
-                                <a href="portfolio-2-col.html">Category</a>
+                                <a href="portfolio-2-col.html"><i class="fa fa-list-ul fa-lg" style="color: #4775d1;"></i> Category</a>
                             </li>
                             <li>
-                                <a href="portfolio-3-col.html">Cuisine</a>
+                                <a href="portfolio-3-col.html"><i class="fa fa-fire fa-lg" style="color: orange;"></i> Cuisine</a>
                             </li>                            
                         </ul>
                     </li>
