--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -8,7 +8,8 @@
   </style>
 
 
-<h1><strong>Our Recipes</strong></h1>
+<center><h1><strong>Our Recipes</strong></h1></center>
+<br>
 <div class="row">
 <div class='row'>
 <% @recipes.each do |recipe| %>
