--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,9 +1,9 @@
-<div class="jumbotron">
+<div>
  <center>
 <style>
     /* Only necessary if you are using navbar-fixed-top */
     body {
-      padding-top: 25px; padding-left: 25px; padding-right: 25px
+      padding-top: 30px; padding-left: 25px; padding-right: 25px
     }
   </style>
    <h1><strong><%= @recipe.name %></strong></h1>
@@ -21,7 +21,7 @@
  <!-- <h3>Image: <%= @recipe.image %></h3> -->
  <h3><strong>Instructions:</strong> <%= @recipe.instructions %></h3>
 </div>
-<%= link_to 'Back to Recipes', recipes_url , class: "btn btn-primary" %>
+<%= link_to 'Back to Recipes', recipes_url , class: "btn btn-default" %>
 
  
 
