--- a/app/views/cart/checkout.html.erb
+++ b/app/views/cart/checkout.html.erb
@@ -1,10 +1,58 @@
-<h1>Lets Cook!</h1>
+<div class="jumbotron h1" style="color:white;"">Lets Cook!</div>
 <p>Here are the recipes you've chosen:</p>
 
 <% @meal.order_items.each do |key, value| %>
 <ul>
-	<li><%= Recipe.find(key).name %> - <%= value %></li>
+	<% array = Recipe.find(key).instructions.split(".") %>
+	<li><h1><strong><%= Recipe.find(key).name %></strong></h1></li>
+	<% array.each do |instruction| %>
+		<li><%= instruction %>.</li>
+		<% end %>
 </ul>
+<script language="JavaScript" type="text/javascript">
+<!-- Copyright 2006, Sandeep Gangadharan -->
+<!-- For more free scripts go to http://www.sivamdesign.com/scripts/ -->
+
+<!--
+var sec = 40;   // set the seconds
+var min = <% Recipe.find(key).cookTime %>;   // set the minutes
+
+function countDown() {
+   sec--;
+  if (sec == -01) {
+   sec = 59;
+   min = min - 1; }
+  else {
+   min = min; }
+
+if (sec<=9) { sec = "0" + sec; }
+
+  time = (min<=9 ? "0" + min : min) + " min and " + sec + " sec ";
+
+if (document.getElementById) { document.getElementById('theTime').innerHTML = time; }
+
+SD=window.setTimeout("countDown();", 1000);
+if (min == '00' && sec == '00') { sec = "00"; window.clearTimeout(SD); }
+}
+window.onload = countDown;
+// -->
+</script>
+
+<style type="text/css">
+<!--
+ .timeClass {
+  font-family:arial,verdana,helvetica,sans-serif;
+  font-weight:normal;
+  font-size:10pt;
+  }
+-->
+</style>
+
+<!-- This goes into the BODY of the file -->
+
+<table width="100%">
+ <tr><td width="100%" align="center"><span id="theTime" class="timeClass"></span></td></tr>
+</table>
 <% end %>
 <p>
 	<strong>Total Cook Time:</strong> <%= @meal.total_cook_time %>
