--- a/app/views/cart/checkout.html.erb
+++ b/app/views/cart/checkout.html.erb
@@ -9,13 +9,15 @@
 		<li><%= instruction %>.</li>
 		<% end %>
 </ul>
-<script language="JavaScript" type="text/javascript">
-<!-- Copyright 2006, Sandeep Gangadharan -->
-<!-- For more free scripts go to http://www.sivamdesign.com/scripts/ -->
 
-<!--
+
+<span height='200px' id="theTime" class="timeClass">
+ </span>
+
+<script language="JavaScript" type="text/javascript">
+
 var sec = 40;   // set the seconds
-var min = <% Recipe.find(key).cookTime %>;   // set the minutes
+var min = 1;   // set the minutes
 
 function countDown() {
    sec--;
@@ -27,33 +29,31 @@ function countDown() {
 
 if (sec<=9) { sec = "0" + sec; }
 
-  time = (min<=9 ? "0" + min : min) + " min and " + sec + " sec ";
+time = (min<=9 ? "0" + min : min) + " min and " + sec + " sec ";
 
-if (document.getElementById) { document.getElementById('theTime').innerHTML = time; }
+document.getElementById('theTime').innerHTML =time;
 
 SD=window.setTimeout("countDown();", 1000);
+
 if (min == '00' && sec == '00') { sec = "00"; window.clearTimeout(SD); }
 }
 window.onload = countDown;
-// -->
 </script>
 
 <style type="text/css">
-<!--
+
  .timeClass {
   font-family:arial,verdana,helvetica,sans-serif;
   font-weight:normal;
   font-size:10pt;
   }
--->
+
 </style>
 
 <!-- This goes into the BODY of the file -->
 
-<table width="100%">
- <tr><td width="100%" align="center"><span id="theTime" class="timeClass"></span></td></tr>
-</table>
 <% end %>
+
 <p>
 	<strong>Total Cook Time:</strong> <%= @meal.total_cook_time %>
 </p>
